static/styles/zulip.css
/* ... */
.zulip-button:focus {
    box-shadow: inset 0px 100px 0px 0px rgba(255,255,255,0.2), 0px 0px 0px 1px rgba(0,0,0,0.2);
}

.zulip-button:hover {
    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.09) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.09)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.09) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
    background-image: -o-linear-gradient(top, rgba(0,0,0,0.09) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.09) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.09) 0%,rgba(0,0,0,0) 100%); /* W3C */
}

.sub_unsub_button {
    min-width: 140px;
    float: right;
    margin-top: 9px;
    margin-right: 10px;
}

.green-button {
    background-color: #006e2e; /* Old browsers */
    color: #fff;
}

.red-button {
    background-color: #cc0000;
    color: #ffffff;
}

.blue-button {
    background-color: #0000cc;
    color: #ffffff;
}

.sub_arrow {
    float: right;
    line-height: 47px;
    padding: 0 15px 0 0;
}

#create_stream_row td {
    background-color: #f3f3f3;
    border-color: #BBB;
    border-bottom: 1px solid #BBB;
}

#create_stream_name {
    width: 220px;
    margin-top: 10px;
}

#create_stream_button {
    min-width: 140px;
    margin-left: 15px;
    margin-top: 10px;
}

.sub_settings_title {
    line-height: 30px;
    margin: 10px 0;
    font-weight: 300;
    font-size: 16px;
}

.new-stream-name,
.stream-rename-button {
    margin-top: 10px;
}

.settings_committed {
    margin: 10px;
}

.subscriber-list-box {
    text-align: center;
}

.subscriber_list_container {
    margin-top: 10px;
    display: inline-block;
    margin: auto;
    max-height: 300px;
    overflow: auto;
    text-align: left;
}

.subscriber-list {
    width: auto;
    margin: auto;
    margin-bottom: 20px;
    background: #efefef;
    border-radius: 6px;
}

.subscriber-list tr:nth-child(even) {
   background: #fafafa;
}


.subscriber-name,
.subscriber-email {
    padding: 5px;
}

.subscriber-name {
    padding-left: 8px;
}

.subscriber-email {
    margin-left: 20px;
    padding-right: 8px;
}

.subscriber_list_add {
    margin: auto;
    text-align: center;
}

.add-subscriber-button,
.stream-rename-button {
    margin-left: 5px;
}

.modal {
    overflow: hidden;
    margin-top: 0;
    top: 5%;
    outline: 0; /* Bootstrap uses tabindex=-1 on modals for focus and ESC handling,
                   so avoid the outline it causes */
}

.modal-body {
    max-height: 60vh;
}

.modal form {
    margin-bottom: 0px;
}

#invitee_emails {
    min-height: 40px;
    max-height: 300px;
}

#invite_status {
    display: none;
}

.settings-dropdown-caret {
    margin-left: 8px;
    font-size: 14px;
}

#notifications-area {
    position: fixed;
    z-index: 10;
    bottom: 0px;
    right: 20px;
    width: 200px;
    height: auto;
}

.notifications-gravatar img {
    max-width: 25px;
    max-height: 25px;
    padding-left: 4px;
    padding-top: 4px;
}

#notifications-bar {
    z-index: 9000;
    position: absolute;
    bottom: 0px; /* necessary to get slideUp, slideDown directions correct */
    width: 100%;
    height: 35px;
    border-radius: 10px 10px 0px 0px;
    padding: 10px 0px 0px 10px;
    background: #58F;
    color: white;
    font-size: 125%;
    cursor: default;
    display: none;
    /* For now, cut off long messages (but we should find a better solution) */
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.empty_feed_notice {
    padding: 3em 4em;
    display: none;
}

.empty_feed_notice h4 {
    text-align: center;
}

#empty_narrow_message p {
    text-align: center;
}

.faded {
    opacity: 0.4;
}

#stream-message,
#private-message {
    display: none;
}

.emoji {
    height: 20px;
    width: 20px;
    vertical-align: text-bottom;
}

#sending-indicator {
    float: left;
    font-weight: bold;
    display: none;
}

.streamlist_swatch {
    display: block;
    width: 1em;
    height: 1em;
    vertical-align: middle;
    border-radius: 1em;
    float: left;
    position: absolute;
    left: 1px;
    top: 3px;
}

ul.expanded_subjects {
    list-style-type: none;
    font-weight: normal;
    margin-left: 0px;
}

li.show-more-topics,
li.expanded_subject {
    position: relative;
}

.show-all-streams a {
    color: #333;
}

.all-streams-padding {
    padding-top: 5px;
    margin-bottom: -5px;
}

.expanded_subject .subject_box {
    display: block;
    margin-right: 38px;
}

.expanded_subject.zero-subject-unreads .subject_box {
    display: block;
    margin-right: 15px;
}


.twitter-tweet {
    border: 1px solid #ddd;
    padding: .5em .75em;
    margin-bottom: 0.25em;
}

.twitter-avatar {
    float: left;
    width: 48px;
    height: 48px;
    margin-right: .75em;
}

.star {
    display: inline-block;
    opacity: 1;
    font-size: 14px;
    color: #2c8211;
}

.empty-star {
    color: #bbb;
    visibility: hidden;
}

.empty-star:hover {
    cursor: pointer;
    color: #565656;
}

.info {
    display: inline-block;
    font-size: 15px;
    color: #bbb;
    visibility: hidden;
}

.star:hover {
    cursor:  pointer;
    color: #0d7245;
}

.settings_separator {
    margin-top:    2em;
    margin-bottom: 2em;
}

/* FIXME: Combine this rule with the one in portico.css somehow? */
#pw_strength {
    width: 220px;
    height: 25px;
    margin-bottom: 0px;
}

/* Override padding-top on form labels when they label only text */
.form-horizontal .label_for_text {
    padding-top: 0;
}

#pw_change_controls {
    display: none;
}

.sub-unsub-message,
.date_row {
    text-align: center;
    padding-bottom: 10px; /* same as .bookend */
}

.date_row .date-direction {
    display: inline-block;
    padding-right: 5px;
}
/* ... */

